added meta lines

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page Boilerplate</title>
+    <meta name="description" content="Pure Landing Page Boilerplate" property="description">
+    <meta name="keywords" content="landing page, boilerplate" property="keywords">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
